--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "stripe": "^10.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
