--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.29.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
